--- a/dom_manipulation_part01.html
+++ b/dom_manipulation_part01.html
@@ -9,8 +9,16 @@
     <h1>Welcome to JavaScript</h1>
 
     <h3>Welcome to Internet Tecnologies</h3>
-
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores assumenda deleniti eaque eius enim, ex id impedit, ipsa laudantium maiores maxime nemo omnis perferendis placeat similique sint unde vitae.</p>
+
+    <div id="subject01" name="myname" >Let's learn HTML</div>
+    <div id="subject02" class="mysubject01">Let's learn CSS</div>
+    <div id="subject03">Let's learn JS</div>
+
+    <h6>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium asperiores, cum dicta ducimus eos hic id laborum minima nesciunt nulla perspiciatis, quibusdam quisquam quos recusandae rerum saepe sit tenetur?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium asperiores, cum dicta ducimus eos hic id laborum minima nesciunt nulla perspiciatis, quibusdam quisquam quos recusandae rerum saepe sit tenetur?</p>
+    </h6>
     <script src=".idea/script.js"></script>
 </body>
 </html>
